--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,9 +35,9 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             	 <li><a class="active" href="index.html">Home</a></li>
-            	 <li><a class="active" href="research.html">Research</a></li>
-	         <li><a class="active" href="software.html">Software</a></li>
-	         <li><a class="active" href="teaching.html">Teaching</a></li>
+            	 <li><a class="active" href="undergrads.html">For Undergraduates</a></li>
+	         <li><a class="active" href="software.html">Current Mentors and Projects</a></li>
+	         <li><a class="active" href="teaching.html">History</a></li>
 		 <li><a class="active" href="cv.html">CV</a></li>
 	         <li><a class="active" href="contact.html">Contact</a></li>
           </ul>
@@ -60,8 +60,8 @@
 
   gtag('config', 'UA-113521888-1');
 </script>
-	
-	
-	
+
+
+
 </body>
 </html>
