--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,14 +2,14 @@
 <html>
 <head>
    <meta charset="utf-8">
-   <meta name="keywords" content="bryan d martin,
-	bryan martin,
+   <meta name="keywords" content="DRP,
+   Directed Reading Program,
 	uw statistics,
-	uw biostatistics,
-	bryandmartin,
-	university of washington statistics,
-	university of washington biostatistics,
-	macalester college">
+   statistics and probability association,
+	university of washington,
+	anna neufeld,
+	emily flanagan,
+	undergraduate research">
    <title>{{ site.title }}</title>
 
    <link rel="stylesheet" type="text/css" href="{{ site.path }}/css/style.css" >
