--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,9 +35,9 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             	 <li><a class="active" href="index.html">Home</a></li>
-            	 <li><a class="active" href="undergrads.html">For Undergraduates</a></li>
-	         <li><a class="active" href="software.html">Current Mentors and Projects</a></li>
-	         <li><a class="active" href="teaching.html">History</a></li>
+            	 <li><a class="active" href="undergrads.html">For Undergrads</a></li>
+	         <li><a class="active" href="mentors.html">Current Mentors and Projects</a></li>
+	         <li><a class="active" href="history.html">History</a></li>
 		 <li><a class="active" href="cv.html">CV</a></li>
 	         <li><a class="active" href="contact.html">Contact</a></li>
           </ul>
