--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,9 +36,8 @@
           <ul class="nav navbar-nav">
             	 <li><a class="active" href="index.html">Home</a></li>
             	 <li><a class="active" href="undergrads.html">For Undergrads</a></li>
-	         <li><a class="active" href="mentors.html">Current Mentors and Projects</a></li>
+	         <li><a class="active" href="mentors.html">Mentors and Projects</a></li>
 	         <li><a class="active" href="history.html">History</a></li>
-		 <li><a class="active" href="cv.html">CV</a></li>
 	         <li><a class="active" href="contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
